--- a/src/app/auth/registro/registro.component.html
+++ b/src/app/auth/registro/registro.component.html
@@ -72,7 +72,7 @@
               <span *ngIf="confirmarSenha?.errors?.['required']">A senha precisa ser preenchida.</span>
               <span *ngIf="confirmarSenha?.errors?.['minlength']">A senha deve ter no mínimo 6 caracteres.</span>
             </div>
-          </div>
+          </div>-->
 
           <!-- Submit button -->
           <div class="card-footer g-grid d-flex gap-1 mt-4">
