--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="col-12 col-md-5">
-          <img src="dashboard-image.svg" class="img-fluid">
+          <img src="/assets/dashboard-image.svg" class="img-fluid">
         </div>
       </div>
     </div>
