--- a/src/app/contatos/editar/editar-contato.component.html
+++ b/src/app/contatos/editar/editar-contato.component.html
@@ -1,1 +1,102 @@
-<p>editar-contato works!</p>
+<div class="container user-select-none">
+  <div class="row">
+    <!-- Conteúdo principal -->
+    <div class="col-12 col-md-10 col-lg-6 mx-auto my-5">
+      <!-- nome -->
+      <div class="text-md-start">
+        <h1 class="fw-bold text-primary">
+            Editar Contato
+          </h1>
+        <hr />
+      </div>
+
+      <form [formGroup]="formContato">
+
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Nome:</label>
+          <input
+            [ngClass]="nome?.touched && nome?.invalid ? 'is-invalid' : ''"
+            formControlName="nome"
+            class="form-control"
+            type="text"
+            placeholder="Digite o nome da Contato"
+          />
+          <div class="invalid-tooltip" *ngIf="nome?.touched && nome?.invalid">
+            <span *ngIf="nome?.errors?.['required']">O nome precisa ser preenchido.</span>
+            <span *ngIf="nome?.errors?.['minlength']">O nome deve ter no mínimo 3 caracteres.</span>
+          </div>
+        </div>
+
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Telefone:</label>
+          <input
+            [ngClass]="telefone?.touched && telefone?.invalid ? 'is-invalid' : ''"
+            formControlName="telefone"
+            class="form-control"
+            type="text"
+            placeholder="Digite o telefone do Contato"
+          />
+          <div class="invalid-tooltip" *ngIf="telefone?.touched && telefone?.invalid">
+            <span *ngIf="telefone?.errors?.['required']">O telefone precisa ser preenchido.</span>
+          </div>
+        </div>
+
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Email:</label>
+          <input
+            [ngClass]="email?.touched && email?.invalid ? 'is-invalid' : ''"
+            formControlName="email"
+            class="form-control"
+            type="text"
+            placeholder="Digite o email do Contato"
+          />
+          <div class="invalid-tooltip" *ngIf="email?.touched && email?.invalid">
+            <span *ngIf="email?.errors?.['required']">O email precisa ser preenchido.</span>
+          </div>
+        </div>
+
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Empresa:</label>
+          <input
+            [ngClass]="empresa?.touched && empresa?.invalid ? 'is-invalid' : ''"
+            formControlName="empresa"
+            class="form-control"
+            type="text"
+            placeholder="Digite a empresa do Contato"
+          />
+          <div class="invalid-tooltip" *ngIf="empresa?.touched && empresa?.invalid">
+            <span *ngIf="empresa?.errors?.['required']">A empresa precisa ser preenchida.</span>
+          </div>
+        </div>
+
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Cargo:</label>
+          <input
+            [ngClass]="cargo?.touched && cargo?.invalid ? 'is-invalid' : ''"
+            formControlName="cargo"
+            class="form-control"
+            type="text"
+            placeholder="Digite o cargo do Contato"
+          />
+          <div class="invalid-tooltip" *ngIf="cargo?.touched && cargo?.invalid">
+            <span *ngIf="cargo?.errors?.['required']">O cargo precisa ser preenchido.</span>
+          </div>
+        </div>
+
+        <div class="card-footer g-grid d-flex gap-1 mt-5">
+          <button (click)="gravar()"
+            type="button" class="btn btn-primary px-5">
+            <i class="bi bi-save me-2"></i>
+            Gravar
+          </button>
+          <button routerLink="/Contatos/listar"
+            type="button" class="btn btn-outline-primary px-5">
+            <i class="bi bi-arrow-return-left me-2"></i>
+            Voltar
+          </button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
