--- a/src/app/tarefas/editar/editar-tarefa.component.html
+++ b/src/app/tarefas/editar/editar-tarefa.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container user-select-none">
   <div class="row">
     <!-- Conteúdo principal -->
     <div class="col-12 col-md-10 col-lg-6 mx-auto my-5">
