--- a/src/app/contatos/editar/editar-contato.component.html
+++ b/src/app/contatos/editar/editar-contato.component.html
@@ -89,7 +89,7 @@
             <i class="bi bi-save me-2"></i>
             Gravar
           </button>
-          <button routerLink="/Contatos/listar"
+          <button routerLink="/contatos/listar"
             type="button" class="btn btn-outline-primary px-5">
             <i class="bi bi-arrow-return-left me-2"></i>
             Voltar
