--- a/src/app/Compromissos/listar/listar-compromisso.component.html
+++ b/src/app/Compromissos/listar/listar-compromisso.component.html
@@ -1,1 +1,68 @@
-<p>listar-compromisso works!</p>
+<div class="container" >
+  <div class="row">
+
+    <!-- Conteúdo principal -->
+    <div class="col-12 col-md-10 col-lg-9 mx-auto mt-5">
+
+      <!-- Titulo -->
+      <div class="text-md-start">
+        <h1 class="fw-bold text-primary">
+            Listar Compromissos
+          </h1>
+        <hr />
+      </div>
+
+      <!-- Barra de Ações -->
+      <div class="d-grid d-md-flex gap-1 mt-5">
+        <a [routerLink]="['/compromissos/inserir']"  role="button" class="btn btn-primary me-md-1">
+            <i class="pi pi-plus-circle me-2"></i>
+            Novo Compromisso
+        </a>
+      </div>
+
+      <!-- Listagem de Registros -->
+      <div class="mt-3">
+        <table class="table table-light table-striped table-hover table-borderless">
+          <thead class="thead-dark text-center">
+          <tr>
+            <th>Assunto</th>
+            <th>Local</th>
+            <th>Tipo Local</th>
+            <th>Data</th>
+            <th>Hora Início</th>
+            <th>Hora Término</th>
+            <th>Contato</th>
+            <th>Ações</th>
+          </tr>
+          </thead>
+          <tbody class="text-center">
+            <tr *ngFor="let t of (compromissos$ | async)">
+
+              <td>{{ t.assunto }}</td>
+              <td>{{ t.local }}</td>
+              <td>{{ t.tipoLocal }}</td>
+              <td>{{ t.data }}</td>
+              <td>{{ t.horaInicio }}</td>
+              <td>{{ t.horaTermino }}</td>
+              <td>{{ contatoNome }}</td>
+
+              <td class="d-grid d-md-block">
+                <button [routerLink]="['/compromissos/editar', t.id]"
+                  type="button" class="btn btn-sm btn-primary me-0 me-md-1 mb-1 mb-md-auto">
+                  <i class="bi bi-pencil"></i>
+                </button>
+                <button [routerLink]="['/Compromissos/excluir', t.id]"
+                  type="button" class="btn btn-sm btn-outline-danger me-0 me-md-1 mb-1 mb-md-auto">
+                  <i class="bi bi-trash"></i>
+                </button>
+              </td>
+
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
