--- a/src/app/despesas/inserir/inserir-despesa.component.html
+++ b/src/app/despesas/inserir/inserir-despesa.component.html
@@ -27,43 +27,57 @@
           </div>
         </div>
 
-      <div class="form-group mb-3 position-relative">
-        <label class="form-label">Valor:</label>
-        <input
-          [ngClass]="valor?.touched && valor?.invalid ? 'is-invalid' : ''"
-          formControlName="valor"
-          class="form-control"
-          type="number"
-          placeholder="Digite o valor da despesa"
-        />
-        <div class="invalid-tooltip" *ngIf="valor?.touched && valor?.invalid">
-          <span *ngIf="valor?.errors?.['required']">O valor é obrigatório.</span>
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Valor:</label>
+          <input
+            [ngClass]="valor?.touched && valor?.invalid ? 'is-invalid' : ''"
+            formControlName="valor"
+            class="form-control"
+            type="number"
+            placeholder="Digite o valor da despesa"
+          />
+          <div class="invalid-tooltip" *ngIf="valor?.touched && valor?.invalid">
+            <span *ngIf="valor?.errors?.['required']">O valor é obrigatório.</span>
+          </div>
         </div>
-      </div>
 
-      <div class="form-group mb-3 position-relative">
-        <label class="form-label">Data:</label>
-        <input
-          [ngClass]="data?.touched && data?.invalid ? 'is-invalid' : ''"
-          formControlName="data"
-          class="form-control"
-          type="date"
-          placeholder="Digite o valor da despesa"
-        />
-        <div class="invalid-tooltip" *ngIf="data?.touched && data?.invalid">
-          <span *ngIf="data?.errors?.['required']">A data é obrigatória.</span>
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Data:</label>
+          <input
+            [ngClass]="data?.touched && data?.invalid ? 'is-invalid' : ''"
+            formControlName="data"
+            class="form-control"
+            type="date"
+            placeholder="Digite o valor da despesa"
+          />
+          <div class="invalid-tooltip" *ngIf="data?.touched && data?.invalid">
+            <span *ngIf="data?.errors?.['required']">A data é obrigatória.</span>
+          </div>
         </div>
-      </div>
 
-      <div class="form-group mb-3 position-relative">
-        <label class="form-label">Forma de Pagamento:</label>
-        <ng-select id="ngSelect"
-           formControlName="formaPagamento" [clearable]="false" [searchable]="false">
-          <ng-option *ngFor="let formaPag of formasPagamento ; index as i" [value]="formaPag">
-              {{ formaPag }}
-          </ng-option>
-        </ng-select>
-      </div>
+        <div class="form-group mb-3 position-relative">
+          <label class="form-label">Forma de Pagamento:</label>
+          <ng-select id="ngSelect"
+            formControlName="formaPagamento" [clearable]="false" [searchable]="false">
+            <ng-option *ngFor="let formaPag of formasPagamento ; index as i" [value]="formaPag">
+                {{ formaPag }}
+            </ng-option>
+          </ng-select>
+        </div>
+
+        <form [formGroup]="formCategorias">
+          <div class="form-group mt-3">
+            <label class="form-label">Categorias:</label>
+            <div class="input-group mb-3">
+              <input formControlName="tituloItem"
+                type="text" class="form-control" placeholder="Digite a categoria que compõe a despesa" >
+              <div class="input-group-append">
+                <button (click)="adicionarCategoria()"
+                  class="btn btn-outline-primary rounded-0" type="button" >Adicionar</button>
+              </div>
+            </div>
+          </div>
+        </form>
 
         <div class="card-footer g-grid d-flex gap-1 mt-5">
           <button (click)="gravar()"
